argo-apps/nexus/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/managed-by: Helm
  name: nexus-route
  namespace: tooling
spec:
  port:
    targetPort: application
  tls:
    termination: edge
  to:
    kind: Service
    name: nexus-repository-sonatype-nexus-service
    weight: 100
  wildcardPolicy: None
